helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
